--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "simplepie/simplepie": "1.3.1",
         "phpunit/phpunit": "3.7.21",
-        "phpunit/php-timer": "1.0.4"
+        "phpunit/php-timer": "1.0.4",
+        "mustache/mustache": "v2.3.1"
     }
 }
